// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Component > renders magnificent monkeys 1`] = `
<div>
  <h1>
    Our First Test
  </h1>
</div>
`;

exports[`App component > renders magnificent monkeys 1`] = `
<div>
  <button
    type="button"
  >
    Click Me
  </button>
  <h1>
    Magnificent Monkeys
  </h1>
</div>
`;
